# graphics

./: README.md  Render.sln
DecimateMesh/: .gitignore  CMakeLists.txt  main.cpp
Render/: CMakeLists.txt  Render.vcxproj  gl-utils.cpp  gl-utils.h  image.cpp  image.h  mesh.cpp  mesh.h  render.cpp  shader.fs  shader.vs  skybox.cpp  skybox.fs  skybox.h  skybox.vs  transform.cpp  transform.h
Render/scripts/: create-video-from-pictures  resize-rename
make-textured-mesh/graphite/: geomagic-decimate-doctor.py  geomagic.py  texture.py  transfer-color-to-texture.mlx
make-textured-mesh/make-uv/: CMakeLists.txt  README  main.cpp
make-textured-mesh/meshlab/: decimate-and-make-texture  decimate-and-make-texture.bat  decimate-and-uv.mlx  decimate.mlx  geomagic-with-parameters.py  run-geomagic.bash  run-geomagic.bat  uv.mlx
obfuscate/: CMakeLists.txt  obfuscate.cpp
obfuscate-with-texture/: CMakeLists.txt  obfuscate-with-texture.cpp
obfuscate/scripts/: archive.py  copy-to-yadisk  obfuscate-an-archive-and-publish  obfuscate-archive-copy-publish  obfuscate-dir  ply-to-zipped-wrl  publish-all
