cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(DECIMATE_MESH_PROJECT)
find_package(PCL 1.3 REQUIRED COMPONENTS io surface)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(decimate-mesh main.cpp)
target_link_libraries(decimate-mesh ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_SURFACE_LIBRARIES})
